# agent-infra

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
agent_infra/: __init__.py  cli.py
agent_infra/client/: __init__.py  session.py
agent_infra/cluster/: __init__.py  base.py  local.py  slurm.py
agent_infra/config/: __init__.py  loader.py  schema.py
agent_infra/orchestrator/: __init__.py  manager.py
agent_infra/proxy/: __init__.py  backend.py  server.py  strategies.py  tracker.py
agent_infra/server/: __init__.py  base.py  vllm.py
agent_infra/tunnel/: __init__.py  ssh.py
configs/: example.yaml
dashboard/: Cargo.toml
dashboard/src/: main.rs  model.rs
dashboard/src/collector/: mod.rs  proxy.rs  throughput.rs
dashboard/src/ui/: analysis.rs  backends.rs  header.rs  help.rs  mod.rs  queue.rs  recent.rs  sessions.rs  theme.rs
examples/: basic_proxy.py  custom_agent.py  slurm_setup.py
