[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"
description = "Real-time TUI dashboard for agent-infra GPU monitoring"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
